--- a/_posts/2023-08-25-小学.md
+++ b/_posts/2023-08-25-小学.md
@@ -7,10 +7,6 @@ tags: [作品, 幼儿园]
 toc:  true
 ---
 
-### 这是我画的大楼
-
-<img src="{{ "/images/posts/2023-08-25/小学.jpg" | prepend: site.baseurl | prepend: site.url}}" alt="小学" />
-
-### 大楼
+### 这是参观完小学之后画的
 
  <img src="/images/posts/2023-08-25/小学.jpg">
