--- a/_posts/2023-08-25-我的画.md
+++ b/_posts/2023-08-25-我的画.md
@@ -9,4 +9,7 @@ toc:  true
 
 ### 这是我画的大楼
 徐老师要让我们用积木搭一座大楼，这是我的设计图，是一座迪士尼的城堡。
- <img src="/images/posts/2023-08-25/1.jpg">
+一共有59个小的正方体▪️，1个空心方块♦️，5个三角形，6个圆柱形。
+
+
+ <img src="/images/posts/2023-08-25/1.jpg">{: .align-center}
