更新 2023-08-25-小学.md

--- a/_posts/2023-08-25-小学.md
+++ b/_posts/2023-08-25-小学.md
@@ -7,7 +7,8 @@ tags: [作品, 幼儿园]
 toc:  true
 ---
 
-### 这是参观完小学之后画的
+这是参观完小学之后画的
+
 幼儿园的滑梯🛝是木头做的，小学的滑滑梯是金属做的。  小学的早操和幼儿园的早操也不一样。
 
  <img src="/images/posts/2023-08-25/小学.jpg">
