更新 2023-08-26-送菜的车.md

--- a/_posts/2023-08-26-送菜的车.md
+++ b/_posts/2023-08-26-送菜的车.md
@@ -6,7 +6,7 @@ last_modified_at: 2022-03-29 09:01:25 +0800
 tags: [作品, 幼儿园]
 toc:  true
 ---
+送菜车
 
-### 送菜车
 上海疫情的时候，我在家中画的送菜车，每天都是靠这些卡车供给我们吃的蔬菜。
  <img src="/images/posts/2023-08-26/送菜车.JPG">{: .align-center}
