--- a/_posts/2023-08-06-我和爸爸的快乐时光.md
+++ b/_posts/2023-08-06-我和爸爸的快乐时光.md
@@ -8,7 +8,7 @@ toc:  true
 ---
 我和爸爸的快乐时光
 
- <img src="/images/posts/2023-08-26/送菜车.JPG">{: .align-center}
+ <img src="/images/posts/2023-08-06/溜冰.JPG">{: .align-center}
 
 今天是个阳光明媚的周六,我和爸爸一起去了附近的溜冰场。这不仅是我们第一次一起溜冰,对爸爸来说也是首次溜冰!开始时我还有些害怕,因为我完全不会滑冰,生怕一个不小心就摔倒了。但爸爸虽然也是第一次溜冰,但他学得很快,基本上没有摔跤。
 
