--- a/_posts/2023-12-17-有人敲门.md
+++ b/_posts/2023-12-17-有人敲门.md
@@ -8,7 +8,7 @@ toc:  true
 ---
 有人敲门
 
- <img src="/images/posts/2023-08-06/滑冰.JPG">{: .align-center}
+ <img src="/images/posts/2023-08-06/girl.JPG">{: .align-center}
 
 我：有人敲门
 爸爸：谁在外面？
